# librime

./: .gitignore  .gitmodules  AGENTS.md  AGENTS_ZH.md  AIPARA_MIGRATION_PLAN.md  BUILD-windows-weasel-plugins.zh-CN.md  CMakeLists.txt  Makefile  PYTHON_TO_ZEROMQ_MIGRATION_PROMPT.md  README-mac.zh-CN.md  README-windows.zh-CN.md  README.zh-CN.md  aipara插件开发计划.md  build.bat  env.bat.template  installation.yaml  librime.code-workspace
Rime/: aipara_pro.dict.yaml  aipara_pro.schema.yaml  default.yaml
Rime/lua/: ai_assistant_segmentor.lua  ai_assistant_translator.lua  aux_code_filter_v3 copy.lua  aux_code_filter_v3.lua  cloud_ai_filter_v2.lua  cloud_input_processor.lua  debug_utils.lua  logger.lua  punct_eng_chinese_filter.lua  rawenglish_segment.lua  rawenglish_translator.lua  smart_cursor_processor.lua  spans_manager.lua  tcp_socket_sync.lua  tcp_zmq.lua  text_splitter.lua
data/minimal/: cangjie5.schema.yaml  luna_pinyin.schema.yaml
plugins/ai-assistant_segmentor/: CMakeLists.txt
plugins/ai-assistant_segmentor/src/: ai_assistant_segmentor.cc  ai_assistant_segmentor.h  ai_assistant_segmentor_module.cc
plugins/aipara/: CMakeLists.txt
plugins/aipara/src/: ai_assistant_segmentor.cc  ai_assistant_segmentor.h  ai_assistant_translator.cc  ai_assistant_translator.h  aipara_logger.cc  aipara_logger.h  aipara_module.cc  autocap_filter.cc  autocap_filter.h  aux_code_filter_v3.cc  aux_code_filter_v3.h  cloud_ai_filter_v2.cc  cloud_ai_filter_v2.h  cloud_input_processor.cc  cloud_input_processor.h  punct_eng_chinese_filter.cc  punct_eng_chinese_filter.h  rawenglish_segmentor.cc  rawenglish_segmentor.h  rawenglish_translator.cc  rawenglish_translator.h  select_character_processor.cc  select_character_processor.h  smart_cursor_processor.cc  smart_cursor_processor.h  tcp_socket_sync.cc  tcp_socket_sync.h  text_formatting.h  text_formatting_filter.cc  text_formatting_filter.h
plugins/aipara/src/common/: logger.cc  logger.h  spans_manager.cc  spans_manager.h  tcp_socket_sync.cc  tcp_socket_sync.h  tcp_zmq.cc  tcp_zmq.h  text_formatting.cc  text_formatting.h
plugins/aipara/src/common/keys/: client.key  client_secret.key  server_public.key
plugins/keylogger/: CMakeLists.txt
plugins/keylogger/src/: key_logger.cc  key_logger.h  keylogger_module.cc
test/: CMakeLists.txt
